tests/custom-sysy2022/positive/c069_lib_getarray.sy
int main() {
  int a[8];
  int n = getarray(a);
  int s = 0;
  int i = 0;
  while (i < n) {
    s = s + a[i];
    i = i + 1;
  }
  putint(s);
  putch(10);
  return 0;
}
