tests/custom-sysy2022/negative/c116_neg_sem_10.sy
int n = 3;
int a[n];
int main() {
  return 0;
}
